# config-backup-app

backup-service/: .gitignore  README.md  prompt-journal.md  requirements-dev.txt  requirements.txt  setup.cfg
backup-service/config/: config.docker.yaml  config.example.yaml  config.yaml
backup-service/config/conf.d/: README.md  mysql.yaml  nginx.yaml  ssh.yaml
backup-service/docker/: Dockerfile  docker-compose.yml
backup-service/docker/conf.d/: app.yaml  system.yaml
backup-service/scripts/: install.sh  uninstall.sh
backup-service/src/: __init__.py  __main__.py  backup.py  cleanup.py  cli.py  config.py  main.py  scheduler.py
backup-service/src/utils/: __init__.py  time_parser.py
backup-service/systemd/: backup-service.service
backup-service/test_files/: file1.conf  file2.conf
backup-service/tests/: test_backup.py  test_cleanup.py  test_config.py  test_time_parser.py
config-backup/: Dockerfile  config.yaml  pyproject.toml
config-backup/config_backup/: __init__.py  backup.py  cli.py  config.py
config-backup/docker/: config.demo.yaml  demo.sh  docker-compose.yml
